recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:20: error: not found: value snowSide
    snowSide(levels-1,length/3)
    ^